--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb://db:27017/personal-chat
-AI_BACKEND=ai:8000
+MONGODB_URI=mongodb://db:27020/personal-chat
+AI_BACKEND=http://ai:8010
