--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -21,8 +21,8 @@ services:
       - "3010:3000"
     environment:
       - NODE_ENV=development
-      - AI_BACKEND=http://ai:8010
-      - MONGODB_URI=mongodb://db:27020/personal-chat
+      # - AI_BACKEND=http://ai:8010
+      # - MONGODB_URI=mongodb://db:27020/personal-chat
 
 volumes:
   node_modules: 
