--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,4 @@
 # MONGODB_URI=mongodb://db:27020/personal-chat
 MONGODB_URI=mongodb://db:27017/personal-chat #correct port considering inside docker network
-AI_BACKEND=http://ai:8010
+# AI_BACKEND=http://ai:8010
+AI_BACKEND=http://ai:8000
